test/conformance/kuttl/verifyImages/clusterpolicy/standard/nomutateDigest-verifyDigest-norequired/04-create-badpod.yaml
## Checks that the badpod.yaml file CANNOT be successfully created. If it can, fail the test as this is incorrect.

apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
- script: |
    if kubectl apply -f badpod.yaml
    then 
      echo "Tested failed. Bad pod was created when it shouldn't have been."
      exit 1 
    else 
      echo "Test succeeded. Bad pod was not created as intended."
      exit 0
    fi
